{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 148,
  "lineage": "31ce1725-c5ec-c629-83d3-03662bc5632b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a4a9ce71ff3f20b",
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:instance/i-04214a340fd2c48d8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04214a340fd2c48d8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_devops",
            "monitoring": false,
            "primary_network_interface_id": "eni-03bf4696d3a5a1ca1",
            "private_dns": "ip-192-168-0-147.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.147",
            "public_dns": "ec2-3-0-51-123.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.51.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e12c345628e3da8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d363c01d5953442",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a939d5ec966818a"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.kp_devops",
            "aws_security_group.sg_devops",
            "aws_subnet.sub_public_devops",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ecb749a5a6f11b3c",
            "owner_id": "659759626052",
            "vpc_id": "vpc-021938fef26a44092"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "access_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ecb749a5a6f11b3c",
            "id": "r-rtb-0d493132cf7f70f6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d493132cf7f70f6b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:security-group/sg-06a939d5ec966818a",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a939d5ec966818a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_devops",
            "name_prefix": null,
            "owner_id": "659759626052",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-021938fef26a44092"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_public_devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:subnet/subnet-05d363c01d5953442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-05d363c01d5953442",
            "map_public_ip_on_launch": true,
            "owner_id": "659759626052",
            "vpc_id": "vpc-021938fef26a44092"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:vpc/vpc-021938fef26a44092",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0493c8379bb8f5d80",
            "default_route_table_id": "rtb-0d493132cf7f70f6b",
            "default_security_group_id": "sg-036385fa0cb9e76b8",
            "dhcp_options_id": "dopt-1bd6dc7c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-021938fef26a44092",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d493132cf7f70f6b",
            "owner_id": "659759626052"
          }
        }
      ]
    }
  ]
}